tick-blk/vagrant-files/envoy/envoy.lb.yaml
admin:
  access_log_path: /tmp/envoy_admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
   - name: tick_listener
     address:
       socket_address: { address: 0.0.0.0, port_value: 9911 }
     filter_chains:
     - filters:
       - name: envoy.http_connection_manager
         config:
           codec_type: AUTO
           stat_prefix: ingress_http
           generate_request_id: true
           route_config:
             name: local_route
             virtual_hosts:
             - name: local_service
               domains: ["*"]
               routes:
               - match: { prefix: "/" }
                 route: { cluster: tick_cluster }
           http_filters:
           - name: envoy.router
             config: {}

  clusters:
  - name: tick_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    http2_protocol_options: {}
    hosts: [{ socket_address: { address: host.docker.internal, port_value: 50081 }},
            { socket_address: { address: host.docker.internal, port_value: 50082 }}]
